/*
 * $Id: ChangeLog,v 1.2551 2004/03/11 00:43:46 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2004-03-11 08:30 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rdd/dbcmd.c
    ! DBF2TEXT() GPF when called w/o argument -> error trapper added.

2004-03-10 16:51 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/classes.c
    ! Fixed few hb_retc() to hb_retcAdoptStatic()

  * source/vm/hvm.c
    ! Fixed memory leak od string items after Error conditions.

2004-03-10 15:29 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rdd/dbcmd.c
    * Tried to fix som error messages in dbCreate, but we must re-design the whole hb_errRT_DBCMD()
      to allow for arguments to be passed. I left commented lines as a template for future.
    * Revised few incorrect Error Codes in dbCreate().
    * Formatting.

2004-03-11 05:50 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rdd/dbcmd.c
    % minor optimization on evaluation of FOR condition in DBF2TEXT()

2004-03-11 05:15 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rdd/dbcmd.c
    % error trapper when trying to append to non existet workarea

2004-03-11 03:25 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/fparse.c
    ! empty string "" was translated as " ", chr(32), space. This is not
      correct. This change converts empty string to NULL, '\0'.

2004-03-11 02:30 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/dbdelim.prg
    * remove PRG sub-routine and unused variable for readability

  + source/rtl/dbdelim_old.prg
    % old version of dbdelim.prg for archive purposes

2004-03-10 11:24 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/gtwvt/gtwvt.c
    * Corrected typo.

  * source/rtl/win32ole.prg
    * Corrected &(HB_VM_STACK).Return to &( HB_VM_STACK.Return )

  * source/vm/classes.c